--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
+    "redis": "^4.6.13",
+    "axios": "^1.6.7",
     "validator": "^13.11.0"
   },
   "devDependencies": {
