--- a/fastapi-backend/requirements.txt
+++ b/fastapi-backend/requirements.txt
@@ -1,30 +1,28 @@
-fastapi
-uvicorn
-sentence-transformers
-numpy
-scikit-learn
-torch
-torchaudio
+fastapi==0.115.11
+uvicorn==0.34.0
+sentence-transformers==3.4.1
+numpy==2.0.2
+scikit-learn==1.5.2
+torch==2.6.0
+torchaudio==2.6.0
 
-pytesseract
-openai-whisper
-moviepy
-SpeechRecognition
-requests
-python-docx
-PyPDF2
-docx2txt
-beautifulsoup4
-pillow
-python-multipart
-boto3
-python-dotenv
-ffmpeg-python
+pytesseract==0.3.13
+openai-whisper==20240930
+moviepy==2.1.2
+SpeechRecognition==3.14.1
+requests==2.32.3
+python-docx==1.1.2
+PyPDF2==3.0.1
+docx2txt==0.8
+beautifulsoup4==4.12.3
+pillow==10.4.0
+python-multipart==0.0.20
+boto3==1.37.18
+python-dotenv==1.0.1
+ffmpeg-python==0.2.0
 
-langchain
-huggingface-hub
-transformers
-torch
-langchain_community
-langchain-community
-langchain-huggingface
+langchain==0.3.21
+huggingface-hub==0.26.3
+transformers==4.46.3
+langchain-community==0.3.20
+langchain-huggingface==0.1.2
